fix pictures
